* Fixing improper calls to NONS_EventQueue::emptify() that were causing undue exit when leaving the debugging console. * Fixing animation bug. * Improving debugging console autocomplete algorithm.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -33,6 +33,8 @@ Bug fixes:
   * Fixed graphical bug in savegame loading mechanism.
   * Fixed bug in BZ2 de/compression routine.
   * Fixed bug in debugging console that caused crash at exit.
+  * Fixed improper calls to internal function that were causing undue exit when
+    leaving the debugging console.
 
 
 20100714
